--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Created by https://www.toptal.com/developers/gitignore/api/kotlin,jetbrains+all,windows,linux,java,intellij+all,visualstudiocode
-# Edit at https://www.toptal.com/developers/gitignore?templates=kotlin,jetbrains+all,windows,linux,java,intellij+all,visualstudiocode
+# Created by https://www.toptal.com/developers/gitignore/api/java,linux,kotlin,windows,intellij+all,jetbrains+all,visualstudiocode,maven
+# Edit at https://www.toptal.com/developers/gitignore?templates=java,linux,kotlin,windows,intellij+all,jetbrains+all,visualstudiocode,maven
 
 ### Intellij+all ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
@@ -198,6 +198,25 @@ replay_pid*
 # .nfs files are created when an open file is removed but is still being accessed
 .nfs*
 
+### Maven ###
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+# https://github.com/takari/maven-wrapper#usage-without-binary-jar
+.mvn/wrapper/maven-wrapper.jar
+
+# Eclipse m2e generated files
+# Eclipse Core
+.project
+# JDT-specific (Eclipse Java Development Tools)
+.classpath
+
 ### VisualStudioCode ###
 .vscode/*
 !.vscode/settings.json
@@ -243,4 +262,4 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.toptal.com/developers/gitignore/api/kotlin,jetbrains+all,windows,linux,java,intellij+all,visualstudiocode
+# End of https://www.toptal.com/developers/gitignore/api/java,linux,kotlin,windows,intellij+all,jetbrains+all,visualstudiocode,maven
