--- a/.gitignore
+++ b/.gitignore
@@ -263,3 +263,4 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/java,linux,kotlin,windows,intellij+all,jetbrains+all,visualstudiocode,maven
+/backend/src/it/unicam/cs/pawm/node_modules/
