--- a/backend/src/it/unicam/cs/pawm/package.json
+++ b/backend/src/it/unicam/cs/pawm/package.json
@@ -12,6 +12,7 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "mysql2": "^3.2.4",
-    "sequelize": "^6.31.1"
+    "sequelize": "^6.31.1",
+    "validator": "^13.9.0"
   }
 }
