--- a/.gitignore
+++ b/.gitignore
@@ -264,3 +264,4 @@ $RECYCLE.BIN/
 
 # End of https://www.toptal.com/developers/gitignore/api/java,linux,kotlin,windows,intellij+all,jetbrains+all,visualstudiocode,maven
 /backend/src/it/unicam/cs/pawm/node_modules/
+.env
