--- a/backend/src/it/unicam/cs/pawm/package.json
+++ b/backend/src/it/unicam/cs/pawm/package.json
@@ -10,7 +10,9 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.4",
     "sequelize": "^6.31.1",
     "validator": "^13.9.0"
