--- a/backend/src/it/unicam/cs/pawm/package.json
+++ b/backend/src/it/unicam/cs/pawm/package.json
@@ -10,12 +10,15 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "crypto": "^1.0.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "https": "^1.0.0",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.4",
+    "path": "^0.12.7",
     "sequelize": "^6.31.1",
     "validator": "^13.9.0"
   }
